首页导航hover闲置动态显示

--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -63,26 +63,8 @@
 									<button class="btn daohang1HoverBtn" onclick="souSpecialType('DN')">电脑</button>
 									<button class="btn daohang1HoverBtn" onclick="souSpecialType('SB')">鼠标</button>
 								</div>
-								<div class="daohang1HoverBottom">
-									<div class="daohang1HoverRec">
-										<div class="recPic"><img src="../img/IphoneXTM.png"/></div>
-										<div class="recDetail">
-											<div class="recName"><h5>IphoneX</h5></div>
-											<div class="recCommon"><h5>国行/九成新/面部识别</h5></div>
-											<div class="recCommon"><h5>￥3000.00</h5></div>
-											<div class="recCommon"><h5>❤12</h5></div>
-										</div>
-									</div>
+								<div class="daohang1HoverBottom" id="daohang1HoverBottom1">
 
-									<div class="daohang1HoverRec">
-										<div class="recPic"><img src="../img/iphone7.png"/></div>
-										<div class="recDetail">
-											<div class="recName"><h5>IphoneSE</h5></div>
-											<div class="recCommon"><h5>正品/全新新/64G版本</h5></div>
-											<div class="recCommon"><h5>￥1200.00</h5></div>
-											<div class="recCommon"><h5>❤2</h5></div>
-										</div>
-									</div>
 								</div>
 							</div>
 						</li>
@@ -98,26 +80,8 @@
 									<button class="btn daohang1HoverBtn" onclick="souSpecialType('KWSJ')">课外书籍</button>
 									<button class="btn daohang1HoverBtn" onclick="souSpecialType('GNW')">国内外名著</button>
 								</div>
-								<div class="daohang1HoverBottom">
-									<div class="daohang1HoverRec">
-										<div class="recPic"><img src="../img/shuji1.png"/></div>
-										<div class="recDetail">
-											<div class="recName"><h5>谈治国理政</h5></div>
-											<div class="recCommon"><h5>十九大/习近平/中国</h5></div>
-											<div class="recCommon"><h5>￥5.5.00</h5></div>
-											<div class="recCommon"><h5>❤12</h5></div>
-										</div>
-									</div>
+								<div class="daohang1HoverBottom" id="daohang1HoverBottom2">
 
-									<div class="daohang1HoverRec">
-										<div class="recPic"><img src="../img/shuji3.png"/></div>
-										<div class="recDetail">
-											<div class="recName"><h5>学习笔记</h5></div>
-											<div class="recCommon"><h5>党/全新/人民</h5></div>
-											<div class="recCommon"><h5>￥10.00</h5></div>
-											<div class="recCommon"><h5>❤42</h5></div>
-										</div>
-									</div>
 								</div>
 							</div>
 						</li>
@@ -129,26 +93,8 @@
 									<p class="daohang1HoverP">全部<h5 class="page-header"></h5></p>
 									<button class="btn daohang1HoverBtn" onclick="souSpecialType('RC')">日常用品</button>
 								</div>
-								<div class="daohang1HoverBottom">
-									<div class="daohang1HoverRec">
-										<div class="recPic"><img src="../img/IphoneXTM.png"/></div>
-										<div class="recDetail">
-											<div class="recName"><h5>IphoneX</h5></div>
-											<div class="recCommon"><h5>国行/九成新/面部识别</h5></div>
-											<div class="recCommon"><h5>￥3000.00</h5></div>
-											<div class="recCommon"><h5>❤12</h5></div>
-										</div>
-									</div>
+								<div class="daohang1HoverBottom" id="daohang1HoverBottom3">
 
-									<div class="daohang1HoverRec">
-										<div class="recPic"><img src="../img/iphone7.png"/></div>
-										<div class="recDetail">
-											<div class="recName"><h5>IphoneSE</h5></div>
-											<div class="recCommon"><h5>正品/全新新/64G版本</h5></div>
-											<div class="recCommon"><h5>￥1200.00</h5></div>
-											<div class="recCommon"><h5>❤2</h5></div>
-										</div>
-									</div>
 								</div>
 							</div>
 						</li>
@@ -162,26 +108,8 @@
 									<button class="btn daohang1HoverBtn" onclick="souSpecialType('XWJZ')">校外兼职</button>
 
 								</div>
-								<div class="daohang1HoverBottom">
-									<div class="daohang1HoverRec">
-										<div class="recPic"><img src="../img/shuji1.png"/></div>
-										<div class="recDetail">
-											<div class="recName"><h5>谈治国理政</h5></div>
-											<div class="recCommon"><h5>十九大/习近平/中国</h5></div>
-											<div class="recCommon"><h5>￥5.5.00</h5></div>
-											<div class="recCommon"><h5>❤12</h5></div>
-										</div>
-									</div>
+								<div class="daohang1HoverBottom" id="daohang1HoverBottom4">
 
-									<div class="daohang1HoverRec">
-										<div class="recPic"><img src="../img/shuji3.png"/></div>
-										<div class="recDetail">
-											<div class="recName"><h5>学习笔记</h5></div>
-											<div class="recCommon"><h5>党/全新/人民</h5></div>
-											<div class="recCommon"><h5>￥10.00</h5></div>
-											<div class="recCommon"><h5>❤42</h5></div>
-										</div>
-									</div>
 								</div>
 							</div>
 						</li>
@@ -193,26 +121,8 @@
 									<p class="daohang1HoverP">全部<h5 class="page-header"></h5></p>
 									<button class="btn daohang1HoverBtn" onclick="souSpecialType('HT')">话题</button>
 								</div>
-								<div class="daohang1HoverBottom">
-									<div class="daohang1HoverRec">
-										<div class="recPic"><img src="../img/IphoneXTM.png"/></div>
-										<div class="recDetail">
-											<div class="recName"><h5>IphoneX</h5></div>
-											<div class="recCommon"><h5>国行/九成新/面部识别</h5></div>
-											<div class="recCommon"><h5>￥3000.00</h5></div>
-											<div class="recCommon"><h5>❤12</h5></div>
-										</div>
-									</div>
+								<div class="daohang1HoverBottom" id="daohang1HoverBottom5">
 
-									<div class="daohang1HoverRec">
-										<div class="recPic"><img src="../img/iphone7.png"/></div>
-										<div class="recDetail">
-											<div class="recName"><h5>IphoneSE</h5></div>
-											<div class="recCommon"><h5>正品/全新新/64G版本</h5></div>
-											<div class="recCommon"><h5>￥1200.00</h5></div>
-											<div class="recCommon"><h5>❤2</h5></div>
-										</div>
-									</div>
 								</div>
 							</div>
 						</li>
