--- a/src/main/resources/static/html/speciallyGood.html
+++ b/src/main/resources/static/html/speciallyGood.html
@@ -53,11 +53,7 @@
 			<div class="all">
 				<div class="top-img">
 					<div class="activeimg" id="activeimg">
-						<div><img id="pic1" src="../img/ewm.png"></div>
-						<div><img id="pic2" src="../img/huoban.png"></div>
-						<div><img id="pic3" src="../img/3.jpg"></div>
-						<div><img id="pic4" src="../img/4.jpg"></div>
-						<div><img id="pic5" src="../img/5.jpg"></div>
+
 					</div>
 					<div class="left"><img src="../img/left.png"> </div>
 					<div class="right"><img src="../img/right.png"></div>
@@ -65,27 +61,25 @@
 				<!-- 存放缩略图的容器-->
 				<div class="bot-img">
 					<ul id="bot-img" >
-						<li class="active"><img src="../img/ewm.png"></li>
-						<li><img src="../img/huoban.png"></li>
-						<li><img src="../img/3.jpg"></li>
+
 					</ul>
 				</div>
 			</div>
 		</div>
 		
 		<div class="detailBox">
-			<div><input id="name" type="text" value="Iphone7" disabled="disabled"/></div>
-			<div><input id="words" type="text" value="全新/国行/同城交易" disabled="disabled"/></div>
+			<div><input id="name" type="text" value="***" disabled="disabled"/></div>
+			<div><input id="words" type="text" value="******" disabled="disabled"/></div>
 			<div class="hr1"></div>
 			<div>
-				<div class="detail1"><img src="../img/jiage.png"><input id="price" value="200.0" disabled="disabled"/></div>
-				<div class="detail2"><img src="../img/qq.png"><input id="qq" value="287162738" disabled="disabled"/></div>
-				<div class="detail3"><img src="../img/weixin.png"><input id="wx" value="Double" disabled="disabled"/></div>
+				<div class="detail1"><img src="../img/jiage.png"><input id="price" value="***" disabled="disabled"/></div>
+				<div class="detail2"><img src="../img/qq.png"><input id="qq" value="***" disabled="disabled"/></div>
+				<div class="detail3"><img src="../img/weixin.png"><input id="wx" value="***" disabled="disabled"/></div>
 			</div>
 			<div>
-				<div class="detail4"><img src="../img/area.png"><input id="area" value="B区" disabled="disabled"/></div>
-				<div class="detail5"><img src="../img/shoucang1.png"><input id="scnum" value="被30人收藏" disabled="disabled"/></div>
-				<div class="detail6"><img src="../img/liulan.png"><input id="llnum" value="被浏览120次" disabled="disabled"/></div>
+				<div class="detail4"><img src="../img/area.png"><input id="area" value="***" disabled="disabled"/></div>
+				<div class="detail5"><img src="../img/shoucang1.png"><input id="scnum" value="被*人收藏" disabled="disabled"/></div>
+				<div class="detail6"><img src="../img/liulan.png"><input id="llnum" value="被浏览*次" disabled="disabled"/></div>
 			</div>
 			<div>
 				<textarea id="other" class="form-control" placeholder="" maxlength="500" disabled="disabled"></textarea>
